--- a/LearnNotes.Web/Login/CSS/login.css
+++ b/LearnNotes.Web/Login/CSS/login.css
@@ -1,7 +1,118 @@
-﻿body {
-    background:#f6f6f6 ;
-    margin:0px;
-    padding:0px;
-    font:normal 12px/1.5 Arial,sans-serif;
-    color:#6B6B6B;
+﻿html,body,div,span,a,br,img,input,ul,li,p,form,label{margin:0; padding:0;}
+
+a {
+ cursor:pointer;
+ text-decoration:none;
 }
+body {
+    font: 13px/1.5 consolas,'Microsoft Yahei',tahoma,sans-serif;
+    color: #333;
+    background-color: #fff;
+    min-width: 1255px;
+}
+.logindiv {
+    width:400px!important; /*兼容火狐!important*/
+    margin:auto;
+    margin-top:120px!important;
+}
+.logoimg {
+   margin-left:150px;
+}
+.logo img {
+    width:110px;
+    vertical-align:middle;
+}
+.item {
+    border-bottom: 1px solid #efefef;
+    margin: 0; /*外边距*/
+    padding: 10px 0;/*内边距*/
+}
+.logintext {
+    width: 100%;
+    padding: 10px 12px;
+    font-size: 14px;
+    border: 1px solid #C3C3C3;
+    box-sizing: border-box;
+    font-family: consolas,'Microsoft Yahei',tahoma,sans-serif;
+}
+.btn {
+    width: 100%;
+    padding: 10px 0;
+    background: #0f6ecd;
+    color: #fff;
+}
+.forgetpass {
+    width:60%;
+    float:left;
+    padding-left: 15px;
+}
+.remeberpass {
+    float:left;
+}
+/*.login-form {
+    width: 400px!important;
+    margin-top: 120px!important;
+}
+.ta-c {
+    text-align: center;
+}
+.login-form .logo {
+    margin-bottom: 30px;
+}
+.logo {
+}
+
+.logo img {
+    vertical-align: middle;
+    width: 140px;
+}
+.mc {
+    margin: 0 auto;
+}
+.form {
+    display: block;
+    margin-top: 0em;
+}
+div, p {
+    box-sizing: border-box;
+}
+.form {
+    display: block;
+    margin-top: 0em;
+}
+.login-form .logo {
+    margin-bottom: 30px;
+}
+.logo {
+}
+
+.logo img {
+    vertical-align: middle;
+    width: 140px;
+}
+.mc {
+    margin: 0 auto;
+}
+div, p {
+    box-sizing: border-box;
+}
+div {
+    display: block;
+}
+.form .item {
+    border-bottom: 1px solid #efefef;
+    margin: 0;
+    padding: 10px 0;
+}
+.text {
+    width: 100%;
+    padding: 10px 12px;
+    font-size: 14px;
+    border: 1px solid #C3C3C3;
+    box-sizing: border-box;
+    font-family: consolas,'Microsoft Yahei',tahoma,sans-serif;
+}
+
+input, textarea {
+    outline: none;
+}*/
